# OpenGLExamples

./: config.h.in  main.c  meson.build  output.txt
include/: examples.h  openGLExample.h
include/utils/: programUtils.h  resourceUtils.h
src/examples/: activeTextureExample.c  simpleTriangle.c
src/utils/: programUtils.c  resourceUtils.c
